// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 21.120884235352566,
            "flexDirection": "row",
            "height": 68.3486288041779,
            "justifyContent": "center",
            "width": 68.3486288041779,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.904498127624217,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 34.174314402088946,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.053430166736383,
              "color": "#555",
              "display": "flex",
              "fontSize": 21.120884235352566,
              "left": 13.053430166736383,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 21.120884235352566,
            "flexDirection": "row",
            "height": 68.3486288041779,
            "justifyContent": "center",
            "width": 68.3486288041779,
          },
          Object {
            "backgroundColor": "#4285f4",
            "borderColor": "black",
            "borderWidth": 1.904498127624217,
            "elevation": 3.081477970495983,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 34.174314402088946,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.053430166736383,
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 21.120884235352566,
              "left": 13.053430166736383,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  accessible={false}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 21.120884235352566,
      "flexDirection": "row",
      "height": 68.3486288041779,
      "justifyContent": "center",
      "width": 68.3486288041779,
    }
  }
/>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 21.120884235352566,
            "flexDirection": "row",
            "height": 68.3486288041779,
            "justifyContent": "center",
            "width": 68.3486288041779,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.904498127624217,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 34.174314402088946,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.053430166736383,
              "color": "#555",
              "display": "flex",
              "fontSize": 21.120884235352566,
              "left": 13.053430166736383,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 21.120884235352566,
            "flexDirection": "row",
            "height": 68.3486288041779,
            "justifyContent": "center",
            "width": 68.3486288041779,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.904498127624217,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "none",
              "fontSize": 34.174314402088946,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.053430166736383,
              "color": "#555",
              "display": "none",
              "fontSize": 21.120884235352566,
              "left": 13.053430166736383,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
